# localstack-snapshot

./: Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
localstack_snapshot/pytest/: snapshot.py
localstack_snapshot/snapshots/: prototype.py  report.py  transformer.py  transformer_utility.py
localstack_snapshot/util/: encoding.py
tests/: conftest.py  test_snapshots.py  test_snapshots_integration.py  test_transformer.py
